zluda_bindgen/build/cublasLt_internal.h

    CUBLASWINAPI undefined4 cublasLtTSSMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtTSTMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtTSTMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtTSTMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtTSTMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtTSTMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    CUBLASWINAPI undefined4 cublasLtTSTMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtVCCMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtVCCMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtVCCMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtVCCMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtVCCMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    CUBLASWINAPI undefined4 cublasLtVCCMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtVCVMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtVCVMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtVCVMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtVCVMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtVCVMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    CUBLASWINAPI undefined4 cublasLtVCVMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined * cublasLt_for_cublas_BII(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_BSS(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_DDD(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_HHH(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_HSH(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_HSS(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_SSS(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_TSS(void);
    CUBLASWINAPI undefined * cublasLt_for_cublas_TST(void);